docs: Change ':' style

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                     <div class="time">
                         <div class="hrs">
                             <p>HRS</p>
-                            <button class="time-hrs">00</button>
+                            <button class="time-hrs">00</button>:
                         </div>
                         <div class="min">
                             <p>MIN</p>
-                            <button class="time-min">00</button>
+                            <button class="time-min">00</button>:
                         </div>
                         <div class="sec">
                             <p>SEC</p>
